# UniversalTemplate

./: .gitignore
src/UniversalTemplate/: CMakeLists.txt  README.md  module.cmake
src/UniversalTemplate/04_Tools/: CMakeLists.txt
src/UniversalTemplate/05_Examples/: CMakeLists.txt
src/UniversalTemplate/05_Examples/CSharp/: CMakeLists.txt
src/UniversalTemplate/05_Examples/Java/: CMakeLists.txt  CMakePresets.json
src/UniversalTemplate/05_Examples/Python/: CMakeLists.txt  CMakeUserPresets.json
src/scripts/: build_default_x32.bat  build_default_x64.bat  build_linux.sh  build_mac.sh  build_sublime_text.sh  build_vc100_x32.bat  build_vc100_x64.bat  build_vc140_x32.bat  build_vc140_x64.bat  build_vc143_x32.bat  build_vc143_x64.bat
